# research-projects-with-jax

./: .gitignore  README.md  pyproject.toml  pytest.ini
notebooks/: mnist_training.ipynb
src/jax_deep_learning/: __init__.py
src/jax_deep_learning/adapters/left/: cli.py  inject_config.py
src/jax_deep_learning/adapters/right/: checkpoints_filesystem.py  metrics_jsonl.py  metrics_plotting.py  metrics_stdout.py
src/jax_deep_learning/adapters/right/data_loaders/: __init__.py  npz_classification.py  tabular_csv.py  tabular_csv_kaggle.py  tfds_classification.py
src/jax_deep_learning/core/domain/commands/: __init__.py  train.py
src/jax_deep_learning/core/domain/entities/: __init__.py  base.py  dataset.py  model.py
src/jax_deep_learning/core/domain/errors/: __init__.py  training.py
src/jax_deep_learning/core/domain/utils/: jax_rng.py  metrics.py
src/jax_deep_learning/core/ports/: __init__.py  checkpoint_store.py  dataset_provider.py  metrics_sink.py
src/jax_deep_learning/core/use_cases/: __init__.py  train_classifier.py
tests/: test_derf_mlp_classifier.py  test_metrics_jsonl_sink.py  test_plot_metrics_cli.py  test_tabular_csv_provider_explicit_valid.py  test_tabular_csv_provider_index_encoding.py  test_tabular_csv_provider_missing_numeric.py  test_tabular_csv_provider_multiclass.py  test_tabular_csv_zindi_feature_engineering.py  test_tabular_embed_mlp_classifier.py  test_tabular_embed_mlp_training.py  test_train_classifier_early_stopping_auc.py  test_train_classifier_early_stopping_f1.py  test_training_smoke.py
