[tool.poetry]
name = "jax-deep-learning"
version = "0.1.0"
description = "A JAX deep learning project structured with hexagonal architecture"
authors = ["Ahonakpon Guy Gbaguidi <guygbaguidi123root@gmail.com>"]
readme = "README.md"
packages = [{include = "jax_deep_learning", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.4.0"
jaxlib = "^0.4.0"
tensorflow-datasets = "^4.9.0"
optax = "^0.1.0"
safetensors = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"