[tool.poetry]
name = "jax-deep-learning"
version = "0.1.0"
description = "A JAX deep learning project structured with hexagonal architecture"
authors = ["Ahonakpon Guy Gbaguidi <guygbaguidi123root@gmail.com>"]
readme = "README.md"
packages = [{include = "jax_deep_learning", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jax = "^0.7.2"
jaxlib = "^0.7.2"
tensorflow-datasets = "^4.9.0"
optax = "^0.1.0"
safetensors = "^0.4.0"
tensorflow = "^2.20.0"
matplotlib = "^3.10.6"
inject = "^5.3.0"
typer = {version = "^0.16.0", extras = ["all"]}
rich = "^14.0.0"

[tool.poetry.scripts]
jaxdl = "jax_deep_learning.adapters.left.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"